@@ -1,0 +1,6 @@
+PROJECT (LIBEDC)
+INCLUDE_DIRECTORIES(../include . ${CMAKE_BINARY_DIR})
+
+AUX_SOURCE_DIRECTORY(. LIBEDC_SRCS)
+
+ADD_LIBRARY (libedc STATIC ${LIBEDC_SRCS})
