@@ -9,6 +9,7 @@ cdrkit (1.0pre5) UNRELEASED; urgency=low
   * fixed libmagic detection
   * rewrote README.mkisofs, README.win32
   * better track numbers extraction command in cdda2ogg/cdda2mp3
+  * reenabled (forgotten) support for libedc
 
   [ Christian Fromme ]
   * detailed review and correction of author related data in manpages and
